Fix markdown wrong alignment, fixes #99

--- a/resources/assets/sass/components/form/_Markdown.scss
+++ b/resources/assets/sass/components/form/_Markdown.scss
@@ -2,6 +2,7 @@
   @extend .SharpModule;
   position: relative;
   z-index : z('markdown');
+  padding: 0!important;
 
   .editor-toolbar {
     @extend .SharpModule__header;
